--- a/.gitignore
+++ b/.gitignore
@@ -2,3 +2,10 @@ obj
 bin
 /PgccApi/.vscode
 Screenshots
+/PgccApi/.vs/PgccApi/config/applicationhost.config
+/PgccApi/.vs/PgccApi/v16/.suo
+/PgccApi/.vs/PgccApi/v16/Server/sqlite3/db.lock
+/PgccApi/.vs/PgccApi/v16/Server/sqlite3/storage.ide
+/PgccApi/.vs/PgccApi/v16/Server/sqlite3/storage.ide-shm
+/PgccApi/.vs/PgccApi/v16/Server/sqlite3/storage.ide-wal
+/PgccApi/PgccApi.csproj.user
