Fixed initial migration.

--- a/.gitignore
+++ b/.gitignore
@@ -9,3 +9,4 @@ Screenshots
 /PgccApi/.vs/PgccApi/v16/Server/sqlite3/storage.ide-shm
 /PgccApi/.vs/PgccApi/v16/Server/sqlite3/storage.ide-wal
 /PgccApi/PgccApi.csproj.user
+/PgccApi/.vs/PgccApi/DesignTimeBuild
